--- a/src/client/styles/main/icon.scss
+++ b/src/client/styles/main/icon.scss
@@ -21,7 +21,6 @@
 &.with-icon {
 	rb-icon { top: remy(1); }
 	&.big {
-		rb-icon { top: remy(2); }
 		&.icon-left {
 			rb-icon { right: remy(2); }
 		}
