--- a/src/client/styles/main/sizes.scss
+++ b/src/client/styles/main/sizes.scss
@@ -5,16 +5,19 @@
 	padding: remy(6) remy(12);
 	font-size: remy(16);
 	line-height: remy(24);
+	min-height: remy(26);
 }
 
 &.small {
 	padding: remy(3) remy(6);
 	font-size: remy(12);
 	line-height: remy(16);
+	min-height: remy(14);
 }
 
 &.big {
 	padding: remy(9) remy(16);
 	font-size: remy(18);
 	line-height: remy(27);
+	min-height: remy(34);
 }
